syntax = "proto3";

package users;

import "google/api/annotations.proto";

option go_package="./users";

service users{
  rpc CreateUser(User) returns (UserResponse){
    option (google.api.http) = {
      post: "/addUsr"
      body: "*"
  };
  }
  rpc UpdateUser(User) returns (UserResponse){
    option (google.api.http) = {
      put: "/updateUsr"
      body: "*"
    };
  }
  rpc DeleteUser(Id) returns (UserResponse){
    option (google.api.http) = {
      put: "/deleteUsr"
      body: "*"
    };
  }
  rpc ReadUser(Id) returns (UserResponse){
    option (google.api.http) = {
      get: "/getUsr"
    };
  }
  rpc ReadUsers(Empty) returns (UserResponse){
    option (google.api.http) = {
      get: "/getUsrs"
    };
  }
}

message Empty{
}

message User{
   int32 id = 1;
   string username = 2;
   string name = 3;
   string surname = 4;
}

message Id{
  int32 id = 1;
}

message UserResponse {
  string message = 2;
}